--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.3"
+    "react-native": "0.66.3",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/runtime": "^7.16.3",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react": "^17.0.37",
+    "@types/react-native": "^0.66.6",
     "babel-jest": "^27.3.1",
     "eslint": "^8.3.0",
     "jest": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.5.2"
   },
   "jest": {
     "preset": "react-native"
