--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-paper": "^4.10.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -21,7 +22,9 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.6",
+    "@types/styled-components": "^5.1.16",
     "babel-jest": "^27.3.1",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.3.0",
     "jest": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.2",
