--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/runtime": "^7.16.3",
+    "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.6",
