--- a/ios/Fnet.xcodeproj/xcshareddata/xcschemes/Fnet.xcscheme
+++ b/ios/Fnet.xcodeproj/xcshareddata/xcschemes/Fnet.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1250"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Inception.app"
-               BlueprintName = "Inception"
-               ReferencedContainer = "container:Inception.xcodeproj">
+               BuildableName = "Fnet.app"
+               BlueprintName = "Fnet"
+               ReferencedContainer = "container:Fnet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "InceptionTests.xctest"
-               BlueprintName = "InceptionTests"
-               ReferencedContainer = "container:Inception.xcodeproj">
+               BuildableName = "FnetTests.xctest"
+               BlueprintName = "FnetTests"
+               ReferencedContainer = "container:Fnet.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Inception.app"
-            BlueprintName = "Inception"
-            ReferencedContainer = "container:Inception.xcodeproj">
+            BuildableName = "Fnet.app"
+            BlueprintName = "Fnet"
+            ReferencedContainer = "container:Fnet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Inception.app"
-            BlueprintName = "Inception"
-            ReferencedContainer = "container:Inception.xcodeproj">
+            BuildableName = "Fnet.app"
+            BlueprintName = "Fnet"
+            ReferencedContainer = "container:Fnet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
