--- a/ios/Fnet/info.plist
+++ b/ios/Fnet/info.plist
@@ -29,7 +29,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Inception</string>
+	<string>Fnet</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
