--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
