--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-screens": "^3.10.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
