--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'Fnet' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
+
   target 'FnetTests' do
     inherit! :complete
     # Pods for testing
