--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-document-picker": "^7.1.3",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
@@ -30,6 +32,7 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.6",
+    "@types/react-native-document-picker": "^3.1.1",
     "@types/styled-components": "^5.1.16",
     "babel-jest": "^27.3.1",
     "babel-plugin-styled-components": "^2.0.2",
