--- a/package.json
+++ b/package.json
@@ -6,24 +6,32 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "build": "rm -rf dist/ && webpack --mode=production --config webpack.config.js",
+    "web": "webpack serve --mode=development --config webpack.config.js",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "file-loader": "^6.2.0",
     "react": "17.0.2",
+    "react-art": "^17.0.2",
     "react-native": "0.66.3",
     "react-native-document-picker": "^7.1.3",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal-datetime-picker": "^13.0.1",
-    "react-native-paper": "^4.10.1",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.0",
-    "react-native-splash-screen": "^3.2.0",
+    "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3"
@@ -33,16 +41,25 @@
     "@babel/runtime": "^7.16.3",
     "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@svgr/webpack": "^6.2.0",
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.6",
     "@types/styled-components": "^5.1.16",
     "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-react-native-web": "^0.17.5",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "jest": {
     "preset": "react-native"
